Table admin_users {
  user_id integer [primary key]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  role varchar(50) [default: 'admin']
}

Table team_members {
  id integer [primary key]
  name varchar(100) [not null]
  email varchar(100) [not null, unique]
  studies varchar(500) [not null]
  profession varchar(500) [not null]
  description text [not null]
}


Table memoirs_categories {
  id integer [primary key, increment]
  name varchar(50) [not null, unique]
}

Table memoirs_comments {
  id integer [primary key, increment]
  memoir_id integer [not null, ref: > memoirs.id]
  content varchar(2000) [not null]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]  
}

Table memoirs {
  id integer [primary key, increment]
  author varchar(100) [not null]
  author_email varchar(100) [not null, unique]
  category_id int [not null, ref: > memoirs_categories.id]
  date date [not null]
  title varchar(300) [not null]
  resume text
  content text [not null]
  file_path text [not null]
  reading_time integer
  visualizations integer [default: 0]
  comments text
  likes integer [default: 0]
  status varchar(20) [default: 'active', note: 'draft, active, completed, or cancelled']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table agenda_categories {
  id integer [primary key, increment]
  name varchar(250) [not null, unique]
}


Table agenda {
  id integer [primary key, increment]
  category_id int [not null, ref: > agenda_categories.id]
  date date [not null]
  name varchar(500) [not null]
  description text [not null]
  content text
  footnote text
  file_path text [not null]
  status varchar(20) [default: 'active', note: 'draft, active, completed, or cancelled']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

